fix main overflow while on small screen

--- a/src/scss/book.scss
+++ b/src/scss/book.scss
@@ -2,8 +2,6 @@
     @include fullSize;
     display: flex;
     flex-direction: column;
-    min-width: 33rem;
-    min-height: 23rem;
 
     &-header {
         display: flex;
