--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,8 @@
     gap: 1rem;
     width: 100%;
     height: 100vh;
+    min-width: 33.5rem;
+    min-height: 70rem;
 
     @media only screen and (max-width: 900px) {
         grid-template-columns: 1fr;
